pingpong/manifests/deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong
  namespace: main-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: kriegmachine/pingpong
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /health
               port: 5000
          resources:
            limits:
              cpu: "250m"
              memory: "100Mi"
