pingpong/manifests/deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: main-app
spec:
  type: NodePort
  selector:
    app: pingpong
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
