pingpong/manifests/deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingpong-ingress
  namespace: main-app
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        backend:
            serviceName: pingpong-svc
            servicePort: 80
